small fix with alignment

--- a/src/modules/ngx-select/component/ngx-select.component.scss
+++ b/src/modules/ngx-select/component/ngx-select.component.scss
@@ -139,5 +139,6 @@ ngx-select-option.ngx-active .ngx-option-text {
         box-sizing: border-box;
         z-index: 1000;
         height: 256px;
+        margin: 5px 0;
     }
 }
